# voynich

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
voynich/: analysis.py  manuscript.py
voynich/data/raw/: voynich_transcription_eva.txt
